--- a/pemFioi/components/gaps-table/tests/test-static.html
+++ b/pemFioi/components/gaps-table/tests/test-static.html
@@ -4,9 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Gaps table test - prefilled</title>
+        <title>Gaps table test - static</title>
         <script type="text/javascript" src="../../../../ext/jquery/2.1/jquery.min.js"></script>
         <script type="text/javascript" src="../../../../ext/jquery-ui/1.10/jquery-ui-1.10.3.custom.min.js"></script>
+        <link href="../../../../ext/jquery-ui/1.10/jquery-ui.css" rel="stylesheet">
+        <script type="text/javascript" src="../../../../ext/jquery-csv/jquery.csv.js"></script>
         <script src="../component.js"></script>
         <link href="../styles.css" rel="stylesheet">
         <style>
