--- a/pemFioi/components/gaps-table/tests/test-csv.html
+++ b/pemFioi/components/gaps-table/tests/test-csv.html
@@ -7,6 +7,7 @@
         <title>Gaps table test - data in CSV format</title>
         <script type="text/javascript" src="../../../../ext/jquery/2.1/jquery.min.js"></script>
         <script type="text/javascript" src="../../../../ext/jquery-ui/1.10/jquery-ui-1.10.3.custom.min.js"></script>
+        <link href="../../../../ext/jquery-ui/1.10/jquery-ui.css" rel="stylesheet">
         <script type="text/javascript" src="../../../../ext/jquery-csv/jquery.csv.js"></script>
         <script src="../component.js"></script>
         <link href="../styles.css" rel="stylesheet">
